<resources>
    <string name="app_name">Konwerter jednostek gotowania</string>
    <string name="choose_calculate_variant">Podaj co chcesz przeliczyć</string>
    <string name="ml">mililitry</string>
    <string name="g">gramy</string>
    <string name="on">na</string>
    <string name="glasses">szklanki</string>
    <string name="spoons">łyżki</string>
    <string name="teaspoons">łyżeczki</string>
    <string name="put_value_to_calculate">Podaj wartość do przeliczenia</string>
    <string name="reverse_calculate">Czy zastosować odwrotne przeliczanie?</string>
    <string name="hint_value_to_calculate">Wartość do przeliczenia</string>
    <string name="calculate">Przelicz</string>
    <string name="result">Wynik</string>
</resources>